summaries/A_Run_All/errors.txt
❌ normalize_todays_games ERROR:
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/normalize_todays_games.py", line 55
    print(f"✅ normalize_todays
          ^
SyntaxError: unterminated string literal (detected at line 55)

---

❌ combine_pitcher_weather_park_away ERROR:
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

